--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "npm run build && node server.js",
+    "start": "node server.js",
     "server": "node server.js"
   },
   "dependencies": {
