--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "npm run build && node server.js",
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "server": "node server.js"
   },
   "dependencies": {
@@ -16,9 +16,7 @@
     "react-markdown": "^10.1.0",
     "@google/genai": "^1.30.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
+    "cors": "^2.8.5",
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0",
     "tailwindcss": "^3.3.0",
