--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "npm run build && node server.js",
-    "start": "npm run build && node server.js",
-    "server": "node server.js"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -15,11 +13,11 @@
     "lucide-react": "^0.555.0",
     "react-markdown": "^10.1.0",
     "@google/genai": "^1.30.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "tailwindcss": "^3.3.0"
+  },
+  "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   }
 }
